fix marquee on safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@
   @apply w-24 sm:w-28 lg:w-40 flex justify-center items-center
 }
 .marquee-item-logo {
-  @apply h-10 sm:h-12 lg:h-16 min-w-max
+  @apply h-10 sm:h-12 lg:h-16
 }
 @keyframes marquee {
   0% {
